z-index fixes

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -202,3 +202,7 @@ label {
     width: 20%;
   }
 }
+.nav-inner{
+  position:relative;
+  z-index:20
+}
