--- a/src/pages/PaymentPage/payment-page.scss
+++ b/src/pages/PaymentPage/payment-page.scss
@@ -31,8 +31,8 @@
     color: #fff;
     border: solid 1px #2c60cc;
     font-family: soraM;
-    // position:relative !important;
-    // z-index:10000 !important
+    position:relative !important;
+    z-index:10000 !important
   }
 }
 .payment-div {
